<resources>
    <string name="app_name">RunningTrack</string>
    <string name="home">Home</string>
    <string name="statistic">Statistic</string>
    <string name="setting">Setting</string>
    <string name="darkMode">Dark Mode Active</string>
    <string name="darkModeNon">Dark Mode is off</string>
    <string name="change_language">Change Language</string>
    <string name="please_enter_your_name_and_weght">Please enter your name and weght</string>
    <string name="your_name">your name</string>
    <string name="your_weight">your weight</string>
    <string name="apply_change">Apply change</string>
    <string name="total_time">Time</string>
    <string name="total_distance">Distance</string>
    <string name="_0km">0km</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="total_calories_burned">Calories</string>
    <string name="_0kcal">0kcal</string>
    <string name="avarage_speed">Speed</string>
    <string name="_0km_h">0km/h</string>
    <string name="finish">Finish</string>
    <string name="_00_00_00_00">00:00:00:00</string>
    <string name="start">Start</string>
    <string name="image">imageRun</string>
    <string name="stop">Stop</string>
    <string name="btnclose">btnClose</string>
    <string name="cancelRun">Cancel the Run?</string>
    <string name="messageCancel">Are you sure that you want to cancel the current run and delete its data?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="saveRun">Run saved successfully.</string>

    <string-array name="filter_options">
        <item>Date</item>
        <item>Running Time</item>
        <item>Distance</item>
        <item>Average Speed</item>
        <item>Calories Burned</item>
    </string-array>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBLrx_6DeTKJ2PwpEbOtR3o8RpavHABrBU</string>
    <string name="skuy">Skuy!</string>
    <string name="sort_by">Sort by:</string>
    <string name="lastActivity">Last Activity :</string>

    <string name="deleteRun">Successfully deleted run</string>
    <string name="undo">Undo</string>
    <string name="permissionText">You need to accept location permission to use this app</string>
    <string name="saveChange">Saved changes</string>
    <string name="pleaseFill">Please fill out all the fields</string>
</resources>