<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorPrimary">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTotalDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0km"
        android:textSize="30sp"
        android:textColor="?attr/colorPrimaryVariant"
        app:layout_constraintBottom_toTopOf="@+id/tvTotalDistanceInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTotalDistanceInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/total_distance"
        android:textSize="14sp"
        android:textColor="?attr/colorSecondary"
        app:layout_constraintEnd_toEndOf="@+id/tvTotalDistance"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/tvTotalDistance"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTotalTimeInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/total_time"
        android:textSize="14sp"
        android:textColor="?attr/colorSecondary"
        app:layout_constraintEnd_toEndOf="@+id/tvTotalTime"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/tvTotalTime"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTotalTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00_00_00"
        android:textSize="30sp"
        android:textColor="?attr/colorPrimaryVariant"
        app:layout_constraintBottom_toTopOf="@+id/tvTotalTimeInfo"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTotalCaloriesInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/total_calories_burned"
        android:textSize="14sp"
        android:textColor="?attr/colorSecondary"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="@+id/tvTotalCalories"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/tvTotalCalories"
        app:layout_constraintTop_toBottomOf="@+id/tvTotalTimeInfo"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTotalCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0kcal"
        android:textSize="30sp"
        android:textColor="?attr/colorPrimaryVariant"
        app:layout_constraintBottom_toTopOf="@+id/tvTotalCaloriesInfo"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAverageSpeedInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/avarage_speed"
        android:textColor="?attr/colorSecondary"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="@+id/tvAverageSpeed"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/tvAverageSpeed"
        app:layout_constraintTop_toBottomOf="@+id/tvTotalDistanceInfo"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAverageSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0km_h"
        android:textSize="30sp"
        android:textColor="?attr/colorPrimaryVariant"
        app:layout_constraintBottom_toTopOf="@+id/tvAverageSpeedInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.83" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/barChart"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAverageSpeedInfo" />


</androidx.constraintlayout.widget.ConstraintLayout>