<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:elevation="10dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp">

        <ImageView
            android:id="@+id/imageRun"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:contentDescription="@string/image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_error"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/rounded_bt_close"
            android:elevation="4dp"
            app:cardBackgroundColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="@+id/imageRun"
            app:layout_constraintTop_toTopOf="@+id/imageRun">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="12-08-2000"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageRun"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/imageRun" />
        </androidx.cardview.widget.CardView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTotalDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0km"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@id/imageRun"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTotalDistanceInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_distance"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="@+id/tvTotalDistance"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/tvTotalDistance"
            app:layout_constraintTop_toBottomOf="@id/tvTotalDistance" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTotalTimeInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_time"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="@+id/tvTotalTime"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/tvTotalTime"
            app:layout_constraintTop_toBottomOf="@id/tvTotalTime" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTotalTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_00_00_00"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@+id/imageRun"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTotalCaloriesInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/total_calories_burned"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="@+id/tvTotalCalories"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/tvTotalCalories"
            app:layout_constraintTop_toBottomOf="@+id/tvTotalTimeInfo"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTotalCalories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0kcal"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@+id/tvTotalCaloriesInfo"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvAverageSpeedInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:textColor="@android:color/darker_gray"
            android:text="@string/avarage_speed"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/tvAverageSpeed"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/tvAverageSpeed"
            app:layout_constraintTop_toBottomOf="@+id/tvTotalDistanceInfo"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvAverageSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0km_h"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@+id/tvAverageSpeedInfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/tvAverageSpeed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTotalDistanceInfo" />


        <View
            android:id="@+id/view1"
            android:layout_width="0.5dp"
            android:layout_height="130dp"
            android:background="@android:color/black"
            app:layout_constraintBottom_toBottomOf="@+id/tvAverageSpeedInfo"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/tvTotalDistance" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>